# rqrr-wasm

./: .gitignore  Cargo.toml  README.md  build.js  build.sh  package.json  webpack.config.js
docs/: index.html  qr_rust_bg.wasm
dummy/: test.html
rust-src/: Cargo.toml
rust-src/src/: lib.rs  main copy.rs
src/: index.js  lib.rs  main2.rs  quirs_example.rs
src/plugins/: RqrrWasmPlugin.js
