[package]
name = "qr-rust"
version = "0.1.0"
authors = ["Jacky Efendi <jacky.efendi1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
rqrr = "0.2.0"
image = "0.21.2"

[dependencies.wasm-bindgen]
version = "0.2.47"
features = ["serde-serialize"]

[profile.release]
lto = true
